erro digitaçao html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         Também há um modo de privacidade e autenticação para proteger dados sensíveis.
                         Projeto Desenvolvido ultilizando Dart ~~ Flutter , App Android</p>
                         <a href="https://meu-app-financas.onrender.com/" target="_blank" rel="noopener noreferrer">Ver
-                            codigo ⭢</a><br>
+                            projeto ⭢</a><br>
                         <a href="https://github.com/Michaelrodriguesds/Meu-AppControll" target="_blank"
                             rel="noopener noreferrer">Ver codigo ⭢</a>
                 </div>
