feat: adiciona projeto Snake Game ao portfólio

--- a/index.html
+++ b/index.html
@@ -53,7 +53,25 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
         <section class="secao" id="projetos">
             <h2 class="titulo-secao">Projetos</h2>
             <div class="grade-projetos">
-                <!-- Card 1: Controle de Estoque -->
+                <!-- Card 1: Snake Game Online -->
+                <div class="card-projetos">
+                    <img class="img-projeto" src="./img/telapc.png" alt="Snake Game Online">
+                    <div class="info-projeto">
+                        <h3>Snake Game Online - Multiplayer</h3>
+                        <p>Jogo Snake multiplayer em tempo real com WebSocket, featuring IA de bots, chat global e compatibilidade cross-platform. Desenvolvido com Node.js, Express e Canvas API.</p>
+                        <div class="tecnologias-projeto">
+                            <span class="tag-tecnologia">JavaScript</span>
+                            <span class="tag-tecnologia">Node.js</span>
+                            <span class="tag-tecnologia">WebSocket</span>
+                            <span class="tag-tecnologia">HTML5 Canvas</span>
+                            <span class="tag-tecnologia">Express.js</span>
+                        </div>
+                        <a href="https://jogo-online-snake.onrender.com/index.html" target="_blank" rel="noopener noreferrer">Ver projeto ⭢</a>
+                        <a href="https://github.com/Michaelrodriguesds/Jogo_online_snake" target="_blank" rel="noopener noreferrer">Ver código ⭢</a>
+                    </div>
+                </div>
+
+                <!-- Card 2: Controle de Estoque -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/login-pc.jpg" alt="Controle de Estoque">
                     <div class="info-projeto">
@@ -67,7 +85,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 2: Mirian Designer -->
+                <!-- Card 3: Mirian Designer -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/mirianSit.png" alt="Mirian Designer">
                     <div class="info-projeto">
@@ -81,7 +99,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 3: Simple Omelette Recipe -->
+                <!-- Card 4: Simple Omelette Recipe -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/simpleOmelette.png" alt="Simple Omelette Recipe">
                     <div class="info-projeto">
@@ -95,7 +113,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 4: Controle Financeiro -->
+                <!-- Card 5: Controle Financeiro -->
                 <div class="card-projetos">       
                     <img class="img-projeto" src="./img/login.png"alt="controle financeiro">
                     <div class="info-projeto">
@@ -110,7 +128,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 5: Ordenação de Números -->
+                <!-- Card 6: Ordenação de Números -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/ordenaçaoNumerico.png" alt="Ordenação de Números">
                     <div class="info-projeto">
@@ -123,7 +141,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 6: Receita Culinária -->
+                <!-- Card 7: Receita Culinária -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/TiaJurema.png" alt="Receita Culinária">
                     <div class="info-projeto">
@@ -136,7 +154,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 7: Lista de Usuários -->
+                <!-- Card 8: Lista de Usuários -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/ListaUsuario.png" alt="Lista de Usuários">
                     <div class="info-projeto">
@@ -149,7 +167,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                     </div>
                 </div>
 
-                <!-- Card 8: App Mobile - Flutter -->
+                <!-- Card 9: App Mobile - Flutter -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/FluteeMobil.png" alt="App Mobile Flutter">
                     <div class="info-projeto">
@@ -182,6 +200,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                             <li><span class="icone">⚙️</span> <strong>Back-end:</strong> Node.js, .NET, Python</li>
                             <li><span class="icone">🗃️</span> <strong>Banco de Dados:</strong> MongoDB, SQL</li>
                             <li><span class="icone">🐳</span> <strong>DevOps:</strong> Docker, Deploy em Cloud</li>
+                            <li><span class="icone">🎮</span> <strong>Jogos:</strong> WebSocket, Canvas API, Multiplayer</li>
                             <li><span class="icone">🎨</span> <strong>UI/UX:</strong> Design de Interfaces, Experiência do
                                 Usuário</li>
                         </ul>
@@ -212,6 +231,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                         <h3>O Que Me Diferencia:</h3>
                         <ul class="lista-diferenciais">
                             <li>Visão completa do ciclo de desenvolvimento</li>
+                            <li>Experiência em desenvolvimento de jogos multiplayer em tempo real</li>
                             <li>Sensibilidade para criar experiências digitais memoráveis</li>
                             <li>Paixão por transformar limitações em oportunidades creativas</li>
                         </ul>
@@ -230,10 +250,12 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                         <span class="tag-habilidades">HTML-5</span>
                         <span class="tag-habilidades">CSS-3</span>
                         <span class="tag-habilidades">JavaScript</span>
+                        <span class="tag-habilidades">Node.js</span>
+                        <span class="tag-habilidades">WebSocket</span>
+                        <span class="tag-habilidades">Canvas API</span>
                         <span class="tag-habilidades">Python</span>
                         <span class="tag-habilidades">Java</span>
                         <span class="tag-habilidades">React.js</span>
-                        <span class="tag-habilidades">Node.js</span>
                         <span class="tag-habilidades">Angular</span>
                         <span class="tag-habilidades">.NET</span>
                         <span class="tag-habilidades">MongoDB</span>
