Atualiza portfólio com projeto Mural PHP e novas habilidades

--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
         <section class="secao" id="projetos">
             <h2 class="titulo-secao">Projetos</h2>
             <div class="grade-projetos">
+                
+                <!-- NOVO CARD: Mural Social PHP -->
+                <div class="card-projetos">
+                    <img class="img-projeto" src="https://raw.githubusercontent.com/Michaelrodriguesds/mural-Mensagem-PHP/main/screenshot.png" alt="Mural Social PHP" onerror="this.src='img/placeholder-php.jpg'">
+                    <div class="info-projeto">
+                        <h3>Mural Social PHP/MySQL</h3>
+                        <p>Sistema completo de mural de mensagens desenvolvido com PHP puro e MySQL. Inclui formulário seguro, validação, proteção contra SQL injection/XSS, design responsivo e deploy em produção.</p>
+                        <div class="tecnologias-projeto">
+                            <span class="tag-tecnologia">PHP</span>
+                            <span class="tag-tecnologia">MySQL</span>
+                            <span class="tag-tecnologia">PDO</span>
+                            <span class="tag-tecnologia">CSS3</span>
+                            <span class="tag-tecnologia">JavaScript</span>
+                        </div>
+                        <a href="https://muralphp.wuaze.com/" target="_blank" rel="noopener noreferrer">Ver projeto online ⭢</a>
+                        <a href="https://github.com/Michaelrodriguesds/mural-Mensagem-PHP" target="_blank" rel="noopener noreferrer">Ver código ⭢</a>
+                    </div>
+                </div>
+                
                 <!-- Card 1: Snake Game Online -->
                 <div class="card-projetos">
                     <img class="img-projeto" src="./img/telapc.png" alt="Snake Game Online">
@@ -197,8 +216,8 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                         <ul class="lista-habilidades">
                             <li><span class="icone">💻</span> <strong>Front-end:</strong> React, Angular, JavaScript,
                                 TypeScript</li>
-                            <li><span class="icone">⚙️</span> <strong>Back-end:</strong> Node.js, .NET, Python</li>
-                            <li><span class="icone">🗃️</span> <strong>Banco de Dados:</strong> MongoDB, SQL</li>
+                            <li><span class="icone">⚙️</span> <strong>Back-end:</strong> Node.js, .NET, Python, <strong>PHP</strong></li>
+                            <li><span class="icone">🗃️</span> <strong>Banco de Dados:</strong> MongoDB, SQL, <strong>MySQL</strong></li>
                             <li><span class="icone">🐳</span> <strong>DevOps:</strong> Docker, Deploy em Cloud</li>
                             <li><span class="icone">🎮</span> <strong>Jogos:</strong> WebSocket, Canvas API, Multiplayer</li>
                             <li><span class="icone">🎨</span> <strong>UI/UX:</strong> Design de Interfaces, Experiência do
@@ -234,6 +253,7 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                             <li>Experiência em desenvolvimento de jogos multiplayer em tempo real</li>
                             <li>Sensibilidade para criar experiências digitais memoráveis</li>
                             <li>Paixão por transformar limitações em oportunidades creativas</li>
+                            <li>Conhecimento em <strong>PHP e MySQL</strong> com projetos em produção</li>
                         </ul>
                     </div>
 
@@ -261,6 +281,8 @@ Estou sempre em busca de aprimorar meus conhecimentos atuais e aprender novas te
                         <span class="tag-habilidades">MongoDB</span>
                         <span class="tag-habilidades">Docker</span>
                         <span class="tag-habilidades">PHP</span>
+                        <span class="tag-habilidades">MySQL</span>
+                        <span class="tag-habilidades">PDO</span>
                     </div>
                 </div>
             </div>
